; ModuleID = '/home/carl/AnghaBench/git/extr_fast-import.c_grow_tree_content.c'
source_filename = "/home/carl/AnghaBench/git/extr_fast-import.c_grow_tree_content.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_content = type { i64, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tree_content* (%struct.tree_content*, i32)* @grow_tree_content to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tree_content* @grow_tree_content(%struct.tree_content* %0, i32 %1) #0 {
  %3 = alloca %struct.tree_content*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tree_content*, align 8
  store %struct.tree_content* %0, %struct.tree_content** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.tree_content*, %struct.tree_content** %3, align 8
  %7 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = add nsw i64 %8, %10
  %12 = call %struct.tree_content* @new_tree_content(i64 %11)
  store %struct.tree_content* %12, %struct.tree_content** %5, align 8
  %13 = load %struct.tree_content*, %struct.tree_content** %3, align 8
  %14 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.tree_content*, %struct.tree_content** %5, align 8
  %17 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  %18 = load %struct.tree_content*, %struct.tree_content** %3, align 8
  %19 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.tree_content*, %struct.tree_content** %5, align 8
  %22 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %21, i32 0, i32 2
  store i32 %20, i32* %22, align 4
  %23 = load %struct.tree_content*, %struct.tree_content** %5, align 8
  %24 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = load %struct.tree_content*, %struct.tree_content** %3, align 8
  %27 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.tree_content*, %struct.tree_content** %3, align 8
  %30 = getelementptr inbounds %struct.tree_content, %struct.tree_content* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = call i32 @COPY_ARRAY(i32 %25, i32 %28, i64 %31)
  %33 = load %struct.tree_content*, %struct.tree_content** %3, align 8
  %34 = call i32 @release_tree_content(%struct.tree_content* %33)
  %35 = load %struct.tree_content*, %struct.tree_content** %5, align 8
  ret %struct.tree_content* %35
}

declare dso_local %struct.tree_content* @new_tree_content(i64) #1

declare dso_local i32 @COPY_ARRAY(i32, i32, i64) #1

declare dso_local i32 @release_tree_content(%struct.tree_content*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
